try to fix blurry ios mobile background image

--- a/src/style/_home-screen.scss
+++ b/src/style/_home-screen.scss
@@ -9,13 +9,9 @@
 
   &.image {
     filter: grayscale(85%) saturate(2) contrast(1.3);
-    background: no-repeat center center fixed;
+    background: no-repeat center center;
     background-size: cover;
   }
-
-  // &.unFix {
-  //   position: static;
-  // }
 
   .home-radial-grad {
     position: absolute;
